libopencsd: Remove extra slashes
Remove extra slashes that end up in the metalog.  These double slashes
can produce an invalid specification file if there are subdirectories
down the hierarchy when sorted.

For example, consider the following metalog excerpt:

    ./base/aaa type=dir
    ./base//aaa/bbb type=dir

If sorted, would turn out:

    ./base//aaa/bbb type=dir
    ./base/aaa type=dir

Apparently missing the ./base/aaa directory in the specification.

Luckily here are no subdirectories.

Reviewed by:	imp, emaste
Approved by:	emaste (mentor)
MFC after:	1 week
Differential Revision:	https://reviews.freebsd.org/D48779

(cherry picked from commit bccaf0262dcab84be49c42cc6b7a81c279c44b62)

--- a/lib/libopencsd/Makefile
+++ b/lib/libopencsd/Makefile
@@ -122,7 +122,7 @@ APIINCS=	\
 	ocsd_c_api_types.h		\
 	opencsd_c_api.h
 
-APIINCSDIR=${INCLUDEDIR}/opencsd/c_api/
+APIINCSDIR=${INCLUDEDIR}/opencsd/c_api
 
 ETEINCS=	\
 	ete_decoder.h			\
@@ -130,7 +130,7 @@ ETEINCS=	\
 	trc_dcd_mngr_ete.h		\
 	trc_pkt_types_ete.h
 
-ETEINCSDIR=${INCLUDEDIR}/opencsd/ete/
+ETEINCSDIR=${INCLUDEDIR}/opencsd/ete
 
 ETMV4INCS=	\
 	etmv4_decoder.h			\
@@ -143,7 +143,7 @@ ETMV4INCS=	\
 	trc_pkt_proc_etmv4i.h		\
 	trc_pkt_types_etmv4.h
 
-ETMV4INCSDIR=${INCLUDEDIR}/opencsd/etmv4/
+ETMV4INCSDIR=${INCLUDEDIR}/opencsd/etmv4
 
 ETMV3INCS=	\
 	etmv3_decoder.h			\
@@ -154,7 +154,7 @@ ETMV3INCS=	\
 	trc_pkt_proc_etmv3.h		\
 	trc_pkt_types_etmv3.h
 
-ETMV3INCSDIR=${INCLUDEDIR}/opencsd/etmv3/
+ETMV3INCSDIR=${INCLUDEDIR}/opencsd/etmv3
 
 PTMINCS=	\
 	ptm_decoder.h			\
@@ -165,7 +165,7 @@ PTMINCS=	\
 	trc_pkt_proc_ptm.h		\
 	trc_pkt_types_ptm.h
 
-PTMINCSDIR=${INCLUDEDIR}/opencsd/ptm/
+PTMINCSDIR=${INCLUDEDIR}/opencsd/ptm
 
 STMINCS=	\
 	stm_decoder.h			\
@@ -176,7 +176,7 @@ STMINCS=	\
 	trc_pkt_proc_stm.h		\
 	trc_pkt_types_stm.h
 
-STMINCSDIR=${INCLUDEDIR}/opencsd/stm/
+STMINCSDIR=${INCLUDEDIR}/opencsd/stm
 
 INCSGROUPS=INCS APIINCS ETEINCS ETMV3INCS ETMV4INCS PTMINCS STMINCS
 
