device_probe_and_attach.9: Document more device functions
Split out separate descriptions of device_probe and device_attach and
include extra details (such as the effect of a disabled hint during
device_attach).  Reframe device_probe_and_attach as a recommended
wrapper function around device_probe and device_attach.

While here, add a description of device_detach.

Differential Revision:	https://reviews.freebsd.org/D48364

(cherry picked from commit d7fa71dfedd6db18ded3971c6f42b3699b5627d7)

--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -1043,6 +1043,9 @@ MLINKS+=device_set_desc.9 device_get_desc.9 \
 	device_set_desc.9 device_set_descf.9 \
 	device_set_desc.9 device_set_desc_copy.9
 MLINKS+=device_set_flags.9 device_get_flags.9
+MLINKS+=device_probe_and_attach.9 device_attach.9 \
+	device_probe_and_attach.9 device_detach.9 \
+	device_probe_and_attach.9 device_probe.9
 MLINKS+=devstat.9 devicestat.9 \
 	devstat.9 devstat_new_entry.9 \
 	devstat.9 devstat_end_transaction.9 \
