mtree: Add missing libxo/encoder path
Reviewed by:	imp
Approved by:	emaste (mentor)
Fixes:	d1a0d267b78b ("Upgrade libxo to 0.4.5.")
MFC after:	1 week
Differential Revision:	https://reviews.freebsd.org/D48836

(cherry picked from commit d10deaea12adb73a698d907a148f081c402d5dd6)

--- a/etc/mtree/BSD.debug.dist
+++ b/etc/mtree/BSD.debug.dist
@@ -39,6 +39,10 @@
                 ..
                 i18n
                 ..
+                libxo
+                    encoder
+                    ..
+                ..
             ..
             libexec
                 bsdinstall
