mtree: Add missing ossl-modules entry
Reviewed by:	imp
Approved by:	emaste (mentor)
Fixes:	b077aed33b7b ("Merge OpenSSL 3.0.9")
MFC after:	1 week
Differential Revision:	https://reviews.freebsd.org/D48837

--- a/etc/mtree/BSD.debug.dist
+++ b/etc/mtree/BSD.debug.dist
@@ -43,6 +43,8 @@
                     encoder
                     ..
                 ..
+                ossl-modules
+                ..
             ..
             libexec
                 bsdinstall
