mtree: Add missing flua/freebsd/sys entry
Reviewed by:	imp
Approved by:	emaste (mentor)
Fixes:	de1d7d7b87cf ("flua: add freebsd module implementing kldload/kldunload")
Differential Revision:	https://reviews.freebsd.org/D48838

--- a/etc/mtree/BSD.debug.dist
+++ b/etc/mtree/BSD.debug.dist
@@ -37,6 +37,12 @@
                 ..
                 engines-3
                 ..
+                flua
+                    freebsd
+                        sys
+                        ..
+                    ..
+                ..
                 i18n
                 ..
                 libxo
