--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -673,8 +673,7 @@ MLINKS+=buf_ring.9 buf_ring_alloc.9 \
 	buf_ring.9 buf_ring_peek.9
 MLINKS+=bus_activate_resource.9 bus_deactivate_resource.9
 MLINKS+=bus_alloc_resource.9 bus_alloc_resource_any.9
-MLINKS+=bus_attach_children.9 bus_delayed_attach_children.9 \
-	bus_attach_children.9 bus_detach_children.9 \
+MLINKS+=bus_attach_children.9 bus_detach_children.9 \
 	bus_attach_children.9 bus_enumerate_hinted_children.9 \
 	bus_attach_children.9 bus_identify_children.9
 MLINKS+=BUS_BIND_INTR.9 bus_bind_intr.9
