man9: Delete standalone bus_delayed_attach_children.9
The description in bus_attach_children.9 has more details as well as
additional context.

This reverts commit 8770f17a959f2af303213989c0323204bb47c129.

--- a/share/man/man9/Makefile
+++ b/share/man/man9/Makefile
@@ -36,7 +36,6 @@ MAN=	accept_filter.9 \
 	BUS_CHILD_LOCATION.9 \
 	BUS_CHILD_PNPINFO.9 \
 	BUS_CONFIG_INTR.9 \
-	bus_delayed_attach_children.9 \
 	BUS_DESCRIBE_INTR.9 \
 	bus_dma.9 \
 	bus_generic_detach.9 \
@@ -673,7 +672,8 @@ MLINKS+=buf_ring.9 buf_ring_alloc.9 \
 	buf_ring.9 buf_ring_peek.9
 MLINKS+=bus_activate_resource.9 bus_deactivate_resource.9
 MLINKS+=bus_alloc_resource.9 bus_alloc_resource_any.9
-MLINKS+=bus_attach_children.9 bus_detach_children.9 \
+MLINKS+=bus_attach_children.9 bus_delayed_attach_children.9 \
+	bus_attach_children.9 bus_detach_children.9 \
 	bus_attach_children.9 bus_enumerate_hinted_children.9 \
 	bus_attach_children.9 bus_identify_children.9
 MLINKS+=BUS_BIND_INTR.9 bus_bind_intr.9
