--- a/sys/modules/lindebugfs/Makefile
+++ b/sys/modules/lindebugfs/Makefile
@@ -14,6 +14,7 @@ EXPORT_SYMS+=	debugfs_create_file
 EXPORT_SYMS+=	debugfs_create_file_size
 EXPORT_SYMS+=	debugfs_create_file_unsafe
 EXPORT_SYMS+=	debugfs_create_mode_unsafe
+EXPORT_SYMS+=	debugfs_create_str
 EXPORT_SYMS+=	debugfs_create_symlink
 EXPORT_SYMS+=	debugfs_create_u8
 EXPORT_SYMS+=	debugfs_create_u16
