vmm: Add vmm_fence.c to SRCS for vmm.ko on riscv
Fixes:	8f6b66a9d3f2 ("riscv vmm: implement SBI RFNC extension.")

--- a/sys/modules/vmm/Makefile
+++ b/sys/modules/vmm/Makefile
@@ -152,6 +152,7 @@ svm_genassym.o: offset.inc
 .elif ${MACHINE_CPUARCH} == "riscv"
 
 SRCS+=	vmm_aplic.c	\
+	vmm_fence.c	\
 	vmm_riscv.c	\
 	vmm_sbi.c	\
 	vmm_switch.S	\
