mtree: Add missing flua entry
This is a direct commit to the stable/14 and stable/13 branch.

Reviewed by:	emaste
Approved by:	emaste (mentor)
Fixes:  bceabe277e12 ("flua: initial support for "require" in the base system")
Differential Revision:	https://reviews.freebsd.org/D49011

--- a/etc/mtree/BSD.debug.dist
+++ b/etc/mtree/BSD.debug.dist
@@ -39,6 +39,8 @@
                 ..
                 engines
                 ..
+                flua
+                ..
                 i18n
                 ..
                 libxo
