mtree: Add missing directories generated by certctl
This is a direct commit to the stable/13 branch, cherry-picking commit
5b7f73ce16cb ("mtree: Add missing directories generated by certctl"),
because the "untrusted" directory is called "blacklisted" on stable/13.

PR: 255639
Reviewed by:	imp
Approved by:	emaste (mentor)
Differential Revision:	https://reviews.freebsd.org/D49037

--- a/etc/mtree/BSD.root.dist
+++ b/etc/mtree/BSD.root.dist
@@ -94,6 +94,10 @@
         ssh
         ..
         ssl
+            blacklisted
+            ..
+            certs
+            ..
         ..
         syslog.d
         ..
