tests/netinet: add few tests for unconnected UDP socket
1) Test that getsockname() on a socket that experienced a sendto(2)
   returns allocated port.
2) Same as 1), but jailed.  Make sure IP address was also selected.
3) Test that IP_SENDSRCADDR/IP_RECVDSTADDR work.
4) Regression test for bug 274009.

--- a/tests/sys/netinet/Makefile
+++ b/tests/sys/netinet/Makefile
@@ -13,6 +13,7 @@ ATF_TESTS_C=	fibs_multibind_test \
 		tcp_connect_port_test \
 		tcp_implied_connect \
 		tcp_md5_getsockopt \
+		udp_bindings \
 		udp_io
 
 ATF_TESTS_SH=	arp \
@@ -29,6 +30,7 @@ ATF_TESTS_PYTEST+=	carp.py
 ATF_TESTS_PYTEST+=	igmp.py
 
 LIBADD.so_reuseport_lb_test=	pthread
+LIBADD.udp_bindings=		pthread
 
 # Some of the arp tests look for log messages in the dmesg buffer, so run them
 # serially to avoid problems with interleaved output.
