makesyscalls: emit cpp in syscalls.map
If there are per-platform differences in which syscalls are supported,
we should only try to export implemented ones in libc.  Fortunately,
syscall maps are run though cpp.  This is arguably incomplete as
syscall.mk isn't (and can't practically be) supported.

Reviewed by:	kevans
Sponsored by:	DARPA, AFRL
Pull Request:	https://github.com/freebsd/freebsd-src/pull/1575

--- a/sys/tools/syscalls/examples/cpp/syscalls.conf
+++ b/sys/tools/syscalls/examples/cpp/syscalls.conf
@@ -7,4 +7,5 @@ syscallprefix="TEST_SYS_"
 switchname="test_sysent"
 namesname="test_syscallnames"
 systrace="test_systrace_args.c"
+libsysmap="test_syscalls.map"
 compat_set=""
