wlanstats: move from tools to usr.sbin
wlanstats is an incredible tool to get a quick overview of state
of affairs of wireless by looking at the counters.
And it makes it simple.

Having landed the LinuxKPI HW_CRYPTO bits I was asked by users
what to check and I realised the answer is in wlanstats.

It is annoying even as a developer to manually build it for each
installation but given it's also useful to users and support
make it available with the general installation.
Probably very long overdue.

Adjust the Makefile and make build again on main.
Hook it up to the build conditional on MK_WIRELESS.

Discussed with:	adrian
Sponsored by:	The FreeBSD Foundation
TODO:		man page
MFC after:	3 days

--- a/usr.sbin/Makefile
+++ b/usr.sbin/Makefile
@@ -207,6 +207,7 @@ SUBDIR.${MK_UTMPX}+=	ac
 SUBDIR.${MK_UTMPX}+=	lastlogin
 SUBDIR.${MK_UTMPX}+=	utx
 SUBDIR.${MK_WIRELESS}+=	wlandebug
+SUBDIR.${MK_WIRELESS}+=	wlanstats
 SUBDIR.${MK_WIRELESS}+=	wpa
 
 SUBDIR.${MK_TESTS}+=	tests
