--- a/libexec/rtld-elf/rtld-libc/Makefile.inc
+++ b/libexec/rtld-elf/rtld-libc/Makefile.inc
@@ -58,7 +58,7 @@ _libc_other_objects= sigsetjmp lstat stat fstat fstatat fstatfs syscall \
     sysarch __sysctl issetugid __getcwd utrace getpid \
     thr_self thr_kill pread mmap lseek _exit \
     getdirentries _close _fcntl _open _openat _read \
-    _sigprocmask _write readlink __realpathat _setjmp setjmp setjmperr
+    _sigprocmask _write readlink ___realpathat _setjmp setjmp setjmperr
 
 
 # Finally add additional architecture-dependent libc dependencies
