--- a/secure/usr.sbin/sshd/Makefile
+++ b/secure/usr.sbin/sshd/Makefile
@@ -16,6 +16,12 @@ moduli: .MADE
 
 LIBADD=	ssh util
 
+.if ${MK_GSSAPI} != "no" && ${MK_KERBEROS_SUPPORT} != "no"
+CFLAGS+= -include krb5_config.h
+SRCS+=	krb5_config.h
+LIBADD+=	gssapi_krb5 gssapi krb5
+.endif
+
 .if ${MK_TCP_WRAPPERS} != "no"
 CFLAGS+=	-DLIBWRAP=1
 LIBADD+=	wrap
