wlanstats: add -Wno-cast-align back for now
After fixing the obvious build and cast error when moving this from tools
to usr.sbin and removing -Wno-cast-align, re-add it back as at least
powerpc* does not compile without it (amd64, arm64, and i386 were ok).

In general wlanstats may now get a bit more love after 22 years of
being in the tree and being moved at least twice.
But first unbreak things again.

Reported by:	mmel, cperciva (weekly snapshots)
Sponsored by:	The FreeBSD Foundation
Fixes:		61ce422531805
MFC after:	3 days

--- a/usr.sbin/wlanstats/Makefile
+++ b/usr.sbin/wlanstats/Makefile
@@ -9,6 +9,6 @@ LIBADD=	bsdstat
 SRCS=	main.c \
 	wlanstats.c
 
-CFLAGS.clang+= -fbracket-depth=512
+CFLAGS.clang+= -fbracket-depth=512 -Wno-cast-align
 
 .include <bsd.prog.mk>
