tests/netinet: add few tests for sending a broadcast packet
1) Set SO_BROADCAST and send to INADDR_BROADCAST.
2) Set SO_BROADCAST, set IP_ONESBCAST and cycle through broadcast capable
   interfaces sending a datagram on each.
3) Set SO_BROADCAST and send to local broadcast address.

For each test we bind a second socket to check whether the broadcast
is actually received.

Reviewed by:		markj
Differential Revision:	https://reviews.freebsd.org/D49040

--- a/tests/sys/netinet/Makefile
+++ b/tests/sys/netinet/Makefile
@@ -5,7 +5,8 @@ BINDIR=		${TESTSDIR}
 
 TESTS_SUBDIRS+=	libalias
 
-ATF_TESTS_C=	fibs_multibind_test \
+ATF_TESTS_C=	broadcast \
+		fibs_multibind_test \
 		ip_reass_test \
 		ip6_v4mapped_test \
 		so_reuseport_lb_test \
