--- a/release/tools/ec2.conf
+++ b/release/tools/ec2.conf
@@ -65,8 +65,11 @@ ec2_common() {
 
 	# Graviton 1 through Graviton 4 have a bug in their ACPI where they
 	# mark the PL061's pins as needing to be configured in PullUp mode
-	# (in fact the PL061 has no pullup/pulldown resistors).
-	echo 'debug.acpi.quirks="8"' >> ${DESTDIR}/boot/loader.conf
+	# (in fact the PL061 has no pullup/pulldown resistors).  Graviton 1
+	# through Graviton 3 have non-functional PCI _EJ0 and need a value
+	# written to the PCI power status register in order to eject a
+	# device.
+	echo 'debug.acpi.quirks="24"' >> ${DESTDIR}/boot/loader.conf
 
 	# Load the kernel module for the Amazon "Elastic Network Adapter"
 	echo 'if_ena_load="YES"' >> ${DESTDIR}/boot/loader.conf
