acpi_pci: Add quirk for DELAY-after-EJ0
On some EC2 instances, there is a race between removing a device from
the system and making the PCI bus stop reporting the presence of the
device.  As a result, a PCI BUS_RESCAN performed immediately after
the _EJ0 method returns "sees" the device which is being ejected, which
then causes problems later (e.g. we won't recognize a new device being
plugged into that slot because we never knew it was vacant).

On other operating systems the bus is synchronously marked as needing
to be rescanned but the rescan does not occur until O(1) seconds later.

Create a new ACPI_Q_DELAY_BEFORE_EJECT_RESCAN quirk and set it in EC2
AMIs, and add a 10 ms DELAY between _EJ0 and BUS_RESCAN when tht quirk
is set.

Reviewed by:	jhb
MFC after:	1 month
Sponsored by:	Amazon
Differential Revision:	https://reviews.freebsd.org/D49252

(cherry picked from commit 55c3348ed78fb1d0891e8bb51a8948f95da3560b)

--- a/release/tools/ec2.conf
+++ b/release/tools/ec2.conf
@@ -68,8 +68,9 @@ ec2_common() {
 	# (in fact the PL061 has no pullup/pulldown resistors).  Graviton 1
 	# through Graviton 3 have non-functional PCI _EJ0 and need a value
 	# written to the PCI power status register in order to eject a
-	# device.
-	echo 'debug.acpi.quirks="24"' >> ${DESTDIR}/boot/loader.conf
+	# device.  EC2 instances with PCI (not PCIe) buses need a short
+	# delay before rescanning upon device detach.
+	echo 'debug.acpi.quirks="56"' >> ${DESTDIR}/boot/loader.conf
 
 	# Load the kernel module for the Amazon "Elastic Network Adapter"
 	echo 'if_ena_load="YES"' >> ${DESTDIR}/boot/loader.conf
