--- a/Makefile.inc1
+++ b/Makefile.inc1
@@ -594,7 +594,7 @@ EXTRA_REVISION=	p${_BRANCH:C/.*-p([0-9]+$)/\1/}
 .if !defined(PKG_VERSION)
 PKG_VERSION:=	${_PKG_REVISION}${EXTRA_REVISION:C/[[:space:]]//g}
 .endif
-.endif	# !defined(PKG_VERSION)
+.endif	# !defined(_MKSHOWCONFIG)
 
 .if !defined(PKG_TIMESTAMP)
 .if !empty(GIT_CMD) && exists(${GIT_CMD}) && exists(${SRCDIR}/.git)
