pf tests: add a basic snmp_pf test case
Event:		Tokyo Hackathon 202503
(cherry picked from commit c849f533326026501c28cb2c344b16723862551a)

--- a/tests/sys/netpfil/pf/Makefile
+++ b/tests/sys/netpfil/pf/Makefile
@@ -38,6 +38,7 @@ ATF_TESTS_SH+=	altq \
 		sctp \
 		set_skip \
 		set_tos \
+		snmp \
 		src_track \
 		syncookie \
 		synproxy \
@@ -54,7 +55,9 @@ TEST_METADATA+= execenv_jail_params="vnet allow.raw_sockets"
 
 PROGS=	divapp
 
-${PACKAGE}FILES+=	CVE-2019-5597.py \
+${PACKAGE}FILES+=	\
+			bsnmpd.conf \
+			CVE-2019-5597.py \
 			CVE-2019-5598.py \
 			daytime_inetd.conf \
 			echo_inetd.conf \
@@ -69,6 +72,7 @@ ${PACKAGE}FILES+=	CVE-2019-5597.py \
 			rdr-srcport.py \
 			utils.subr
 
+${PACKAGE}FILESMODE_bsnmpd.conf=		0555
 ${PACKAGE}FILESMODE_CVE-2019-5597.py=	0555
 ${PACKAGE}FILESMODE_CVE-2019-5598.py=	0555
 ${PACKAGE}FILESMODE_fragcommon.py=	0555
