EC2: Set PCIe eject timeout to 0
Since PCIe device detaching is done via API, there is no opportunity
to "press the attention button a second time" and thus the 5 second
timeout mandated by PCIe serves no purpose.

MFC after:	2 weeks
Sponsored by:	Amazon

--- a/release/tools/ec2.conf
+++ b/release/tools/ec2.conf
@@ -86,6 +86,12 @@ ec2_common() {
 	# historical "nvd" driver.
 	echo 'hw.nvme.use_nvd="0"' >> ${DESTDIR}/boot/loader.conf
 
+	# Reduce the timeout for PCIe Eject ("hotunplug") requests.  PCIe
+	# mandates a 5 second timeout to allow someone to cancel the eject
+	# by pressing the "Attention button" a second time, but in the EC2
+	# environment this delay serves no purpose.
+	echo 'hw.pci.pcie_hp_detach_timeout="0"' >> ${DESTDIR}/boot/loader.conf
+
 	# Disable KbdInteractiveAuthentication according to EC2 requirements.
 	sed -i '' -e \
 		's/^#KbdInteractiveAuthentication yes/KbdInteractiveAuthentication no/' \
